fix(auth): fix login flow, AuthContext state sync, CORS configuration, and UI visual error feedback